#cmake_minimum_required(VERSION 2.8)
cmake_minimum_required(VERSION 3.10)
project(geotop_2_0 C)

set(CMAKE_C_STANDARD 11)

include_directories(src/geotop)
include_directories(src/libraries/ascii)
include_directories(src/libraries/fluidturtle)
include_directories(src/libraries/geomorphology)
include_directories(src/libraries/math)

add_executable(geotop_2_0
    src/geotop/blowingsnow.c
    src/geotop/blowingsnow.h
    src/geotop/channels.c
    src/geotop/channels.h
    src/geotop/clouds.c
    src/geotop/clouds.h
    src/geotop/constants.h
    src/geotop/deallocate.c
    src/geotop/deallocate.h
    src/geotop/energy.balance.c
    src/geotop/energy.balance.h
    src/geotop/geotop.c
    src/geotop/indices.c
    src/geotop/indices.h
    src/geotop/input.c
    src/geotop/input.h
    src/geotop/keywords.h
    src/geotop/meteo.c
    src/geotop/meteo.h
    src/geotop/meteodata.c
    src/geotop/meteodata.h
    src/geotop/meteodistr.c
    src/geotop/meteodistr.h
    src/geotop/output.c
    src/geotop/output.h
    src/geotop/parameters.c
    src/geotop/parameters.h
    src/geotop/PBSM.c
    src/geotop/PBSM.h
    src/geotop/pedo.funct.c
    src/geotop/pedo.funct.h
    src/geotop/radiation.c
    src/geotop/radiation.h
    src/geotop/recovering.c
    src/geotop/recovering.h
    src/geotop/snow.c
    src/geotop/snow.h
    src/geotop/struct.geotop.h
    src/geotop/tables.c
    src/geotop/tables.h
    src/geotop/times.c
    src/geotop/times.h
    src/geotop/turbulence.c
    src/geotop/turbulence.h
    src/geotop/vegetation.c
    src/geotop/vegetation.h
    src/geotop/water.balance.c
    src/geotop/water.balance.h
    src/libraries/ascii/extensions.h
    src/libraries/ascii/import_ascii.c
    src/libraries/ascii/import_ascii.h
    src/libraries/ascii/init.c
    src/libraries/ascii/init.h
    src/libraries/ascii/rw_maps.c
    src/libraries/ascii/rw_maps.h
    src/libraries/ascii/tabs.c
    src/libraries/ascii/tabs.h
    src/libraries/ascii/write_ascii.c
    src/libraries/ascii/write_ascii.h
    src/libraries/fluidturtle/alloc.c
    src/libraries/fluidturtle/datamanipulation.c
    src/libraries/fluidturtle/error.c
    src/libraries/fluidturtle/linearalgebra.c
    src/libraries/fluidturtle/linearalgebra.h
    src/libraries/fluidturtle/list.c
    src/libraries/fluidturtle/probability.c
    src/libraries/fluidturtle/random.c
    src/libraries/fluidturtle/statistics.c
    src/libraries/fluidturtle/string.c
    src/libraries/fluidturtle/t_alloc.h
    src/libraries/fluidturtle/t_datamanipulation.h
    src/libraries/fluidturtle/t_io.c
    src/libraries/fluidturtle/t_io.h
    src/libraries/fluidturtle/t_list.h
    src/libraries/fluidturtle/t_probability.h
    src/libraries/fluidturtle/t_random.h
    src/libraries/fluidturtle/t_statistics.h
    src/libraries/fluidturtle/t_utilities.h
    src/libraries/fluidturtle/tensor3D.h
    src/libraries/fluidturtle/tensors3D.c
    src/libraries/fluidturtle/turtle.h
    src/libraries/fluidturtle/utilities.c
    src/libraries/fluidturtle/write_dem.c
    src/libraries/fluidturtle/write_dem.h
    src/libraries/geomorphology/dtm_resolution.c
    src/libraries/geomorphology/dtm_resolution.h
    src/libraries/geomorphology/geomorphology.0875.c
    src/libraries/geomorphology/geomorphology.0875.h
    src/libraries/geomorphology/geomorphology.c
    src/libraries/geomorphology/geomorphology.h
    src/libraries/geomorphology/networks.c
    src/libraries/geomorphology/networks.h
    src/libraries/geomorphology/shadows.c
    src/libraries/geomorphology/shadows.h
    src/libraries/math/sparse_matrix.c
    src/libraries/math/sparse_matrix.h
    src/libraries/math/util_math.c
    src/libraries/math/util_math.h)
