option('MUTE_GEOLOG', type: 'boolean', value: false)
option('MUTE_GEOTIMER', type: 'boolean', value: false)
option('MATH_OPTIM', type: 'boolean', value: false)
option('OMP', type: 'boolean', value: false, description: 'Enable openMP framework')

# used to pass additional arguments when running tidy
# target e.g. '-fix-errors' to apply fixes proposed
# by the linter
option('tidy_args', type: 'string', value: '', description:'additional arguments passed to clang-tidy through the target tidy') 
